--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
     <h1>Qadriyyah Johnson</h1>
     <h2>Portfolio</h2>
-    <img src="images/myprofessionalphoto.jpg" width="150px"/> 
+    <img src="images/myprofessionalphoto.jpg" width="200px"/> 
     <section id="allaboutMe">
 
         <h2>All About Me</h2>
@@ -30,8 +30,8 @@
     <div id="projects">
         <article>
             <h3>Project A</h3>
-            <img src="https://3.imimg.com/data3/UE/QH/MY-1010601/automatic-cool-drink-vending-machine.jpg" width="150px">
-            <p>Class of your choice/Vending Machine</p> 
+            <img src="https://as2.ftcdn.net/jpg/01/40/90/99/500_F_140909950_cVDL3IxyEBPCmeO13gz7gRs2vSs2bFr3.jpg" width="200px">
+            <p>Dounut Truck</p> 
         </article>
         <article>
             <h3>Project B</h3>
@@ -40,29 +40,29 @@
         </article>
         <article>
             <h3>Project C</h3>
-            <img src="https://th.bing.com/th/id/R.1041c6e4e84491bc27214a431376742c?rik=0deIuyS%2fAWfimw&pid=ImgRaw&r=0" width="100px">
-            <p>Review group project</p>  
+            <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2020%2F12%2F30%2F2021-restaurant-openings-etta-FT-BLOG1220-2.jpg" width="400px">
+            <p>Restaurant Review Project</p>  
         </article>
     </div>
 
 </section>
 <section id="Contact">
     <h2>Contact</h2>
-    <p>Please contact me if you have are in need of a software developer</p>
+    <p>Please contact me if you are in need of a software developer</p>
     <ul>
         <li>Email: adia1bug@yahoo.com</li>
-        <li>Phone: (216) 200-4805</li>
+        <li>Phone: (216) 571-3427</li>
     </ul>
 </section>  
 </main>
 
 <nav>
-    <a href='#allaboutMe'>All About Me</a>
+    <a href="https://www.linkedin.com/in/qadriyyah-johnson-923341231/">All About Me</a>
     <a href='#allaboutMe'>Skills</a>
-    <a href='#allaboutMe'>Contact</a>
+    <a href="https://github.com/adia1bug">Contact</a>
 </nav>
 <footer>
-    &copy; 2018 Coding
+    &copy; 2022 Coding
 </footer>
 </ol>
 <body>
